--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
     "start": "nodemon --watch server -e js,html server/start.js"
   },
   "dependencies": {
-    "angular": "^1.4.0",
-    "audio5": "^0.1.10",
     "babel": "^5.0.12",
     "bluebird": "^2.9.34",
     "body-parser": "^1.12.0",
-    "bootstrap": "^3.3.4",
+    "bootstrap": "^3.3.5",
     "chalk": "^1.0.0",
     "express": "^4.12.0",
+    "fs-extra": "^0.24.0",
     "lodash": "^3.9.3",
     "mime": "^1.3.4",
     "mongoose": "^4.0.7",
