--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lodash": "^3.9.3",
     "mime": "^1.3.4",
     "mongoose": "^4.0.7",
+    "morgan": "1.6.1",
     "musicmetadata": "^2.0.1",
     "nodemon": "^1.3.7",
     "serve-favicon": "^2.2.0"
