--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "fs-extra": "^0.24.0",
     "lodash": "^3.9.3",
     "mime": "^1.3.4",
-    "mongoose": "^4.0.7",
+    "mongoose": "4.4.1",
     "mongoose-deep-populate": "2.0.3",
     "morgan": "1.6.1",
     "musicmetadata": "^2.0.1",
