--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A generated project at Fullstack Academy",
   "main": "server/start.js",
   "scripts": {
-    "start": "nodemon --watch server -e js,html server/start.js"
+    "start": "nodemon --watch server -e js,html server/start.js",
+    "seed": "node ./bin/seed"
   },
   "dependencies": {
     "babel": "^5.0.12",
