--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "morgan": "1.6.1",
     "musicmetadata": "^2.0.1",
     "nodemon": "^1.3.7",
+    "range-stream": "1.1.0",
     "serve-favicon": "^2.2.0"
   }
 }
