--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server/start.js",
   "scripts": {
     "start": "nodemon --watch server -e js,html server/start.js",
-    "seed": "node ./bin/seed"
+    "seed": "node ./bin/seed",
+    "db-init": "./db-init.sh",
+    "postinstall": "npm run db-init"
   },
   "dependencies": {
     "babel": "^5.0.12",
@@ -17,12 +19,14 @@
     "fs-extra": "^0.24.0",
     "lodash": "^3.9.3",
     "mime": "^1.3.4",
-    "mongoose": "4.4.1",
-    "mongoose-deep-populate": "2.0.3",
     "morgan": "1.6.1",
     "musicmetadata": "^2.0.1",
     "nodemon": "^1.3.7",
+    "pg": "4.5.5",
+    "pg-hstore": "2.3.2",
     "range-stream": "1.1.0",
-    "serve-favicon": "^2.2.0"
+    "sequelize": "3.23.0",
+    "serve-favicon": "^2.2.0",
+    "simple-bufferstream": "1.0.0"
   }
 }
