--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "nodemon": "^1.3.7",
     "pg": "4.5.5",
     "pg-hstore": "2.3.2",
+    "pg-native": "~1.10.0",
     "range-stream": "1.1.0",
+    "send-seekable": "~1.0.2",
     "sequelize": "3.23.0",
     "serve-favicon": "^2.2.0",
     "simple-bufferstream": "1.0.0"
