--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "chalk": "^1.0.0",
     "commander": "^2.9.0",
     "express": "^4.12.0",
-    "itunes-library-stream": "0.0.0",
+    "itunes-library-stream": "^0.0.0",
     "lodash": "^4.15.0",
     "mime": "^1.3.4",
     "musicmetadata": "^2.0.2",
@@ -30,7 +30,7 @@
     "sequelize": "^3.24.1",
     "serve-favicon": "^2.2.0",
     "userhome": "^1.0.0",
-    "volleyball": "1.2.1"
+    "volleyball": "^1.3.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
